<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"/>

    <Button android:id="@+id/btn_back_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back_data"/>
    
    <Button android:id="@+id/btn_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_web"/>    
        
    
    <Button android:id="@+id/btn_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_tel"/>    
    
</LinearLayout>
